<resources>
    <string name="app_name">Talk</string>
    <string name="login">Login</string>
    <string name="sign_up">Create Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="app_title">Talk</string>
    <string name="already_have_an_account">Already Have An Account ?</string>
    <string name="name">Full Name</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="join">Join</string>
    <string name="share">Share</string>
    <string name="secret_code">Secret Code</string>
    <string name="share_code_text">Please share code with your friends to start video call</string>
</resources>