<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardActivity">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:layout_gravity="top">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_title"
            android:layout_gravity="center"
            style="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/white"
            android:textSize="@dimen/app_title"/>
    </androidx.appcompat.widget.Toolbar>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/xl">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/md">
            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/logo_height"
                android:src="@drawable/chat"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/logo"
                app:layout_constraintBottom_toTopOf="@+id/secret_code"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="@dimen/md"
                android:text="@string/share_code_text"
                android:textAlignment="center" />
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/secret_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/description"
                android:background="@drawable/textbox"
                android:padding="@dimen/lg"
                android:hint="@string/secret_code"
                android:textAlignment="center"
                android:textStyle="bold"
                android:layout_margin="@dimen/md"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/join"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/secret_code"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/share"
                android:backgroundTint="@color/primary"
                android:text="@string/join"
                android:layout_margin="@dimen/md"
                app:icon="@drawable/link"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/share"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/secret_code"
                app:layout_constraintStart_toEndOf="@+id/join"
                app:layout_constraintEnd_toEndOf="parent"
                android:backgroundTint="@color/danger"
                android:text="@string/share"
                android:layout_margin="@dimen/md"
                app:icon="@drawable/share"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="bottom"
        app:fabAlignmentMode="center"
        app:fabAnchorMode="cradle"
        app:fabCradleMargin="10dp"
        app:backgroundTint="@color/primary"
        >
        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:menu="@menu/menu"
            app:labelVisibilityMode="labeled"
            android:background="@android:color/transparent" />
    </com.google.android.material.bottomappbar.BottomAppBar>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/video_camera_back"
        android:backgroundTint="@color/primary"
        app:layout_anchor="@id/bottomAppBar"
        />
</androidx.coordinatorlayout.widget.CoordinatorLayout>